--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ body {
   align-items: center;
   border-radius: 14px;
   -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(15px);
   background: rgba(169, 169, 169, 0.2);
   z-index: 100;
 }
@@ -77,7 +77,7 @@ body {
   color: #0c0c0c;
 
   height: 25px;
-  margin: 0 30px;
+  margin: 3px 30px 0 30px;
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -309,13 +309,15 @@ nav .active {
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
+
 .napravlenieinfo {
-  padding: 20px 20px 40px 20px;
+  padding: 20px 20px 40px 27px;
   color: #4a5568;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 80px;
+  gap: 60px;
 }
+
 .forma {
   display: flex;
   padding-top: 25px;
@@ -330,7 +332,8 @@ nav .active {
 }
 .lilbox17 {
   width: 100%;
-  box-shadow: 0 4px 6px -1px rgba(51, 81, 141, 0.153),
+  height: 400px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   border: 2px solid #edf2f7;
   border-radius: 22px;
@@ -347,6 +350,18 @@ nav .active {
 
 /*научная деятельность*/
 .lilbox4 {
+  width: 100%;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border: 2px solid #edf2f7;
+  border-radius: 22px;
+  color: #4a5568;
+  background-color: rgb(255, 255, 255);
+  padding: 30px 40px 30px 40px;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.lilbox20 {
   width: 100%;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -392,7 +407,7 @@ nav .active {
   border-radius: 22px;
   background-color: white;
   color: #4a5568;
-  padding: 40px;
+  padding: 30px 40px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -402,7 +417,10 @@ nav .active {
   justify-items: center;
   gap: 15px;
 }
-
+.infatitle {
+  display: grid;
+  grid-template-columns: 5fr 20px;
+}
 .span {
   color: #000000;
   font-size: 16px;
@@ -439,7 +457,7 @@ nav .active {
   border-radius: 22px;
   color: #4a5568;
   background-color: white;
-  padding: 40px;
+  padding: 30px 40px 30px 40px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -529,13 +547,13 @@ nav .active {
   border-radius: 5px;
 }
 .selector3 {
-  color: #ffffff;
+  color: #000000;
   width: 150px;
   font-family: "Play";
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   border: none;
-  background-color: #0e0e0e;
+  background-color: #ffffff;
   padding: 5px;
   border-radius: 8px;
 }
@@ -624,7 +642,7 @@ nav .active {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(52, 52, 52);
+  background-color: rgb(61, 61, 61);
   padding: 30px 60px 30px 60px;
   margin-bottom: 15px;
   transition-duration: 200ms;
@@ -653,7 +671,7 @@ nav .active {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(52, 52, 52);
+  background-color: rgb(61, 61, 61);
   padding: 30px 60px 30px 60px;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -666,7 +684,7 @@ nav .active {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(52, 52, 52);
+  background-color: rgb(61, 61, 61);
   padding: 30px;
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -679,7 +697,7 @@ nav .active {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(52, 52, 52);
+  background-color: rgb(61, 61, 61);
   padding: 30px;
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
@@ -692,7 +710,7 @@ nav .active {
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
 
   border-radius: 22px;
-  background-color: rgb(52, 52, 52);
+  background-color: rgb(61, 61, 61);
   padding: 30px;
   transition-duration: 400ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
