--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@
 }
 
 body {
+  overflow-x: hidden;
   background-color: hsl(var(--background));
   margin: 0 auto;
   padding: 70px 80px 20px 80px;
@@ -559,7 +560,7 @@ nav .active {
 
   color: #4a5568;
   height: 100%;
-  padding: 40px 200px 40px 100px;
+  padding: 40px 200px 40px 200px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   justify-items: center;
@@ -1418,6 +1419,40 @@ h6 {
   .boxhome {
     padding: 20px 0 40px 0;
   }
+  .scheduleboxbox {
+    margin-top: 0;
+    border: 1px solid #edf2f7;
+    background-color: white;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border-radius: 20px;
+    justify-items: center;
+    gap: 0;
+    margin-bottom: 20px;
+  }
+  .stafimg {
+    border-radius: 10px;
+  }
+  .grouptitle {
+    color: #000000;
+    font-family: "Days One";
+    font-size: 10px;
+    padding: 10px 0 0 0;
+  }
+  .titlenapravlenie1,
+  .titlenapravlenie2,
+  .titlenapravlenie3 {
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    text-align: center;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    border-radius: 12px;
+    background-color: white;
+    padding: 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
   .brand {
     font-family: "Stardock";
     color: #0c0c0c;
@@ -1435,17 +1470,17 @@ h6 {
   }
   .selector2,
   .selector3 {
-    font-size: 10px;
+    font-size: 8px;
   }
   .boxhome {
   }
   .stafflilbox {
     cursor: grab;
-    height: 200px;
-    width: 105px;
+    height: 290px;
+    width: 180px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    border: 2px solid #edf2f7;
+    border: 1px solid #edf2f7;
     border-radius: 10px;
     background-color: white;
     padding: 0;
@@ -1460,7 +1495,7 @@ h6 {
   .staffinf {
     padding: 3px 10px 3px 10px;
     width: 100%;
-    border-radius: 6px;
+    border-radius: 4px;
     color: #4a5568;
     border: 1px solid #e8eef6;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
@@ -1468,15 +1503,7 @@ h6 {
     background: #f7fafc;
     text-align: center;
   }
-  .nauchnayadeyatelnost {
-    padding: 20px 60px 80px 60px;
-    display: flex;
-    grid-template-columns: 2fr 1fr;
-    justify-items: center;
-    gap: 15px;
-    padding-bottom: 100px;
-    flex-wrap: wrap;
-  }
+
   .staffinf p {
     font-size: 6px;
   }
@@ -1494,19 +1521,27 @@ h6 {
   }
   .lilbox1,
   .lilbox2 {
+    border-radius: 15px;
+    border: 1px solid #edf2f7;
     padding: 20px 30px;
     width: 100%;
   }
 
   .lilbox3 {
+    border-radius: 15px;
+    border: 1px solid #edf2f7;
     padding: 20px 30px;
     width: 100%;
   }
   .lilbox4 {
+    border-radius: 15px;
+    border: 1px solid #edf2f7;
     padding: 20px 40px 20px 40px;
     width: 100%;
   }
   .lilbox8 {
+    border-radius: 15px;
+    border: 1px solid #edf2f7;
     padding: 20px;
     width: 100%;
   }
@@ -1514,10 +1549,14 @@ h6 {
     width: 10%;
   }
   .lilbox9 {
+    border-radius: 15px;
+    border: 1px solid #edf2f7;
     width: 100%;
     padding: 20px;
   }
   .lilbox10 {
+    border-radius: 15px;
+    border: 1px solid #edf2f7;
     width: 100%;
     padding: 20px;
   }
@@ -1526,16 +1565,19 @@ h6 {
     height: 170px;
     width: 100%;
     margin-bottom: 0;
+    border-radius: 15px;
   }
   .lilbox12 {
     padding: 20px 30px 20px 30px;
     height: 170px;
     width: 100%;
+    border-radius: 15px;
   }
   .lilbox13 {
     height: 170px;
     width: 100%;
     padding: 20px 30px;
+    border-radius: 15px;
   }
   .vk {
     width: 20px;
@@ -1564,8 +1606,14 @@ h6 {
   .lilbox17 {
     width: 100%;
     height: 380px;
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    padding: 10px;
   }
   .lilbox18 {
+    border-radius: 15px;
+    border: 1px solid #edf2f7;
     padding: 20px 40px 20px 40px;
     width: 100%;
   }
@@ -1667,7 +1715,7 @@ h6 {
 
   h3 {
     font-size: 25px;
-    padding: 0 0 15px 0;
+    padding: 0 0 20px 0;
   }
   h4 {
   }
@@ -1676,14 +1724,251 @@ h6 {
   h6 {
     font-size: 12px;
   }
+  .lilbox20 {
+    width: 100%;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    color: #4a5568;
+    background-color: rgb(255, 255, 255);
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .lilbox5 {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    color: #4a5568;
+    margin-bottom: 5px;
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .lilbox6 {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    color: #4a5568;
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .lilbox7 {
+    width: 100%;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    color: #4a5568;
+    background-color: white;
+    padding: 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .nauchnayadeyatelnost {
+    padding: 20px 10px 40px 10px;
+    display: flex;
+    grid-template-columns: 2fr 1fr;
+    justify-items: center;
+    gap: 5px;
+
+    flex-wrap: wrap;
+  }
+
+  .left {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    gap: 5px;
+  }
   .nornikelimg {
   }
+  .up {
+    display: flex;
+    justify-items: center;
+    gap: 5px;
+    margin-bottom: 5px;
+  }
+  .bottom {
+    display: grid;
+    justify-items: center;
+    gap: 5px;
+  }
+  .dostizhenia {
+    padding: 30px 10px 30px 10px;
+    justify-items: center;
+    gap: 15px;
+    padding-bottom: 50px;
+  }
+  .schedulebox {
+    background-color: white;
+    color: #4a5568;
+    height: 100%;
+    padding: 20px 20px;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    justify-items: center;
+    width: 100%;
+    clip-path: inset(20px 0 round 20px);
+  }
+  .selector {
+    color: #4a5568;
+    width: 85px;
+    font-family: "Play";
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 2px solid #edf2f7;
+    position: relative;
+    outline: none;
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    padding: 2px;
+    border-radius: 5px;
+    font-size: 8px;
+  }
+  .scheduleright {
+    display: grid;
+  }
+  .kontakti {
+    font-size: 9px;
+  }
 }
+@media screen and (max-width: 650px) {
+  .stafflilbox {
+    height: 200px;
+    width: 115px;
+  }
+}
+
 @media screen and (max-width: 430px) {
-  .lilbox11,
-  .lilbox12,
+  .schedulebox {
+    background-color: white;
+    color: #4a5568;
+    height: 100%;
+    padding: 20px 20px;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    justify-items: center;
+    width: 100%;
+    clip-path: inset(20px 0 round 20px);
+  }
+  .scheduleboxbox {
+    margin-top: 0;
+    border: 1px solid #edf2f7;
+    background-color: white;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border-radius: 20px;
+    justify-items: center;
+    gap: 0;
+    margin-bottom: 20px;
+  }
+  .grouptitle {
+    color: #000000;
+    font-family: "Days One";
+    font-size: 10px;
+    padding: 10px 0 0 0;
+  }
   .kontaktititle {
     font-size: 12px;
+  }
+  .dostizhenia {
+    padding: 30px 10px 30px 10px;
+    justify-items: center;
+    gap: 15px;
+    padding-bottom: 50px;
+  }
+  .lilbox7 {
+    width: 100%;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    color: #4a5568;
+    background-color: white;
+    padding: 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .nauchnayadeyatelnost {
+    padding: 20px 10px 40px 10px;
+    display: flex;
+    grid-template-columns: 2fr 1fr;
+    justify-items: center;
+    gap: 5px;
+
+    flex-wrap: wrap;
+  }
+  .lilbox20 {
+    width: 100%;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    color: #4a5568;
+    background-color: rgb(255, 255, 255);
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .lilbox5 {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    color: #4a5568;
+    padding: 20px 20px;
+    margin-bottom: 5px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .lilbox6 {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    color: #4a5568;
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .lilbox11,
+  .lilbox12 {
+    height: 150px;
+    font-size: 12px;
+    border-radius: 15px;
+  }
+  .lilbox13 {
+    height: 150px;
+    border-radius: 15px;
+  }
+  .lilbox17 {
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    padding: 10px;
+  }
+  .titlenapravlenie1,
+  .titlenapravlenie2,
+  .titlenapravlenie3 {
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    text-align: center;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    border-radius: 12px;
+    background-color: white;
+    padding: 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
   .imgsection {
     gap: 20px;
@@ -1697,8 +1982,8 @@ h6 {
     margin-top: 7px;
   }
   h3 {
-    font-size: 20px;
-    padding-bottom: 0;
+    font-size: 22px;
+    padding: 20px 0 20px 0;
   }
   .ssilka {
     font-size: 8px;
@@ -1708,8 +1993,18 @@ h6 {
     font-size: 7px;
     text-align: center;
   }
+
+  .staffinf {
+    border-radius: 4px;
+  }
   .staffinf p {
     font-size: 6px;
+  }
+  .left {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    gap: 5px;
   }
   .stafflilbox {
     cursor: grab;
@@ -1717,12 +2012,44 @@ h6 {
     width: 100px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    border: 2px solid #edf2f7;
+    border: 1px solid #edf2f7;
     border-radius: 10px;
     background-color: white;
     padding: 0;
     transition-duration: 200ms;
     transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .up {
+    display: flex;
+    justify-items: center;
+    gap: 5px;
+    margin-bottom: 5px;
+  }
+  .bottom {
+    display: grid;
+    justify-items: center;
+    gap: 5px;
+  }
+  .selector {
+    color: #4a5568;
+    width: 85px;
+    font-family: "Play";
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 2px solid #edf2f7;
+    position: relative;
+    outline: none;
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    padding: 2px;
+    border-radius: 5px;
+    font-size: 8px;
+  }
+  .scheduleright {
+    display: grid;
+  }
+  .kontakti {
+    font-size: 8px;
   }
 }
 
@@ -1730,8 +2057,150 @@ h6 {
   .imgsection {
     gap: 5px;
   }
+  .scheduleboxbox {
+    margin-top: 0;
+    border: 1px solid #edf2f7;
+    background-color: white;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border-radius: 20px;
+    justify-items: center;
+    gap: 0;
+    margin-bottom: 20px;
+  }
+  .grouptitle {
+    color: #000000;
+    font-family: "Days One";
+    font-size: 10px;
+    padding: 10px 0 0 0;
+  }
+  .scheduleright {
+    display: grid;
+  }
+  .selector {
+    color: #4a5568;
+    width: 85px;
+    font-family: "Play";
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 2px solid #edf2f7;
+    position: relative;
+    outline: none;
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    padding: 2px;
+    border-radius: 5px;
+    font-size: 8px;
+  }
+  .schedulebox {
+    background-color: white;
+    color: #4a5568;
+    height: 100%;
+    padding: 20px 20px;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    justify-items: center;
+    width: 100%;
+    clip-path: inset(20px 0 round 20px);
+  }
+  .dostizhenia {
+    padding: 30px 10px 30px 10px;
+    justify-items: center;
+    gap: 15px;
+    padding-bottom: 50px;
+  }
+  .lilbox7 {
+    width: 100%;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    color: #4a5568;
+    background-color: white;
+    padding: 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .up {
+    display: flex;
+    justify-items: center;
+    gap: 5px;
+    margin-bottom: 5px;
+  }
+  .bottom {
+    display: grid;
+    justify-items: center;
+    gap: 5px;
+  }
+  .nauchnayadeyatelnost {
+    padding: 20px 10px 40px 10px;
+    display: flex;
+    grid-template-columns: 2fr 1fr;
+    justify-items: center;
+    gap: 5px;
+
+    flex-wrap: wrap;
+  }
+  .lilbox20 {
+    width: 100%;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    color: #4a5568;
+    background-color: rgb(255, 255, 255);
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .lilbox5 {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    color: #4a5568;
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    margin-bottom: 5px;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .left {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    gap: 5px;
+  }
+  .lilbox6 {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    color: #4a5568;
+    padding: 20px 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+  .titlenapravlenie1,
+  .titlenapravlenie2,
+  .titlenapravlenie3 {
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    text-align: center;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    border-radius: 12px;
+    background-color: white;
+    padding: 20px;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
   .ssilka {
     font-size: 6px;
+  }
+  .part {
+    width: 45px;
   }
   .ssilki {
     gap: 5px;
@@ -1752,8 +2221,8 @@ h6 {
     font-size: 10px;
   }
   h3 {
-    font-size: 20px;
-    padding-bottom: 0;
+    font-size: 22px;
+    padding: 20px 0 20px 0;
   }
   .footertext {
     font-size: 5px;
@@ -1764,7 +2233,7 @@ h6 {
     width: 85px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    border: 2px solid #edf2f7;
+    border: 1px solid #edf2f7;
     border-radius: 10px;
     background-color: white;
     padding: 0;
@@ -1819,10 +2288,18 @@ h6 {
     transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
 
-  .lilbox11,
-  .lilbox12,
   .kontaktititle {
     font-size: 12px;
+  }
+  .lilbox11,
+  .lilbox12 {
+    height: 150px;
+    font-size: 12px;
+    border-radius: 15px;
+  }
+  .lilbox13 {
+    height: 150px;
+    border-radius: 15px;
   }
   .kontakti {
     font-size: 7px;
@@ -1833,6 +2310,10 @@ h6 {
   }
   .lilbox17 {
     height: 370px;
+    border: 1px solid #edf2f7;
+    border-radius: 15px;
+    background-color: white;
+    padding: 10px;
   }
   .top {
     top: 30px;
@@ -1849,7 +2330,13 @@ h6 {
   .staffinf p {
     font-size: 6px;
   }
+  .staffinf {
+    border-radius: 4px;
+  }
   .stafftext {
     font-size: 6px;
+  }
+  .span {
+    font-size: 10px;
   }
 }
